# Codeforces-Rating-Clawer

./: CMakeLists.txt  README.md  codeforces_clawer.c  ~$defoces Rating Clawer-2026.docx
clawer/: .gitignore  CMakeLists.txt  Codefoces Rating Clawer-2026.docx  README.md  cc_out2.txt  cc_verbose.txt  cf_tool.c  codeforces_clawer.c  ~$defoces Rating Clawer-2026.docx
